DATACMNS-525 - Introduced  Hazelcast repository implementation.
Original pull request: #95.

--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+			<version>3.3</version>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
