--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.8.3</version>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
